fdo#44698 settings are under a different menu in Mac OS X